# Online-Cinema-Project

./: .codecov.yml  .env.example  .flake8  .gitignore  README.md  dbdiagram_db_fixed.sql  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
commands/: check-status.sh  deploy.sh  setup-server.sh
configs/nginx/: nginx.conf
src/: __init__.py  main.py
src/celery_config/: celery_worker.py  celeryconfig.py  tasks.py
src/config/: dependencies.py  settings.py
src/database/: __init__.py  db_sync.py  populate.py  session_postgresql.py  session_sqlite.py
src/database/migrations/: env.py
src/database/migrations/versions/: 1a2c49e68a2f_temp_migration.py  2da0dc469be8_temp_migration.py  32b1054a69e3_initial_migration.py  41cdafa531cf_temp_migration.py  42c9f40c484e_temp_migration.py  e719df11079c_temp_migration.py
src/database/models/: __init__.py  accounts.py  base.py  comments.py  extra_functionality_movie.py  movies.py  orders.py  payments.py  shopping_cart.py
src/database/pagination/: custom_pagination.py
src/database/seed_data/: test_data.csv
src/database/validators/: accounts.py
src/exceptions/: security.py  storage.py
src/notifications/: emails.py  interfaces.py
src/notifications/templates/: success_payment.html
src/routes/: __init__.py  accounts.py  comments.py  extra_functionality_movie.py  movies.py  orders.py  payments.py  profiles.py  shopping_cart.py  users.py
src/schemas/: __init__.py  accounts.py  comments.py  extra_functionality_movie.py  movies.py  orders.py  payments.py  profiles.py  shopping_cart.py  users.py
src/schemas/examples/: movies.py
src/security/: http.py  interfaces.py  passwords.py  token_manager.py  utils.py
src/services/: __init__.py  orders.py  shopping_cart.py
src/services/payments/: payments.py  payments_crud.py
src/storages/: interfaces.py  s3.py
src/tests/: conftest.py  test_cart_model.py
src/tests/doubles/fakes/: storage.py
src/tests/doubles/stubs/: emails.py
src/tests/test_e2e/: test_email_notification.py  test_storage.py
src/tests/test_integration/: test_accounts.py  test_accounts_change_password.py  test_comments.py  test_delete_expired_tokens.py  test_extra_functionality_movie.py  test_favorites_endpoint.py  test_movies.py  test_movies_endpoints.py  test_movies_models.py  test_orders_service.py  test_payments.py  test_payments_retrieve.py  test_profiles.py  test_shopping_cart.py  test_shopping_cart_api.py  test_shopping_cart_service.py  test_shopping_cart_validation.py  test_users.py
src/tests/unit/: test_comment_models.py  test_comment_schemas.py  test_movie_models.py  test_movie_schemas.py  test_shopping_cart_service.py
src/validation/: __init__.py  profile.py  shopping_cart.py
tests/: test_cart_model.py
