[tool.poetry]
name = "src"
version = "0.1.0"
description = "Mate task for first lesson"
authors = ["Yurii Okal <yurii.okal@mate.com>"]

[tool.poetry.dependencies]
aioboto3 = "^13.4.0"
aiosmtplib = "^4.0.0"
aiosqlite = "^0.21.0"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
beautifulsoup4 = "^4.12.3"
bcrypt = "4.0.1"
botocore = "^1.35.99"
coverage = "^7.4.4"
email-validator = "^2.2.0"
fastapi = "^0.115.6"
flake8 = "^7.1.1"
gunicorn = "^23.0.0"
httpx = "^0.28.1"
jinja2 = "^3.1.5"
mypy = "^1.9.0"
pandas = "^2.2.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pillow = "^11.1.0"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.7.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.5"
pytest-order = "^1.3.0"
python = "^3.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.36"
tqdm = "^4.67.1"
uvicorn = "^0.34.0"
validators = "^0.34.0"
celery = "^5.5.3"
redis = "^6.2.0"
stripe = "^12.2.0"
[tool.poetry.group.dev.dependencies]
types-passlib = "*"
types-python-jose = "*"
types-jmespath = "^1.0.2.20250529"
pandas-stubs = "^2.2.3.250527"
types-tqdm = "^4.67.0.20250516"
celery-stubs = "^0.1.3"
pytest-xdist = "^3.5.0"
[[tool.mypy.overrides]]
module = "aioboto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
